# DragonAspectFlight

./: .gitignore  CMakeLists.txt  README.md
Data/OptionalBehaviorGeneratorSupport/Nemesis_Engine/mod/daf/: README.txt  info.ini
Data/OptionalBehaviorGeneratorSupport/Pandora_Engine/mod/daf/: info.xml
Data/OptionalBehaviorGeneratorSupport/Pandora_Engine/mod/daf/patches/: 0_master.xml
Data/SKSE/Plugins/: DragonAspectFlight.ini
Data/SKSE/Plugins/BehaviorDataInjector/: DragonAspectFlight_BDI.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - Bundled Flight Animations/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - Bundled Flight Animations/Idle Hover Branch/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - Bundled Flight Animations/Idle Hover Branch/female/: mt_runstrafeleft.hkx
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - Bundled Flight Animations/Midair Shout Branch/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - Bundled Flight Animations/More Draconic Wings Effect/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - Bundled Flight Animations/More Draconic Wings Effect/female/: mt_walkright.hkx
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - Bundled Flight Animations/Vanilla Arms/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - Bundled Flight Animations/Vanilla Body 01/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - Bundled Flight Animations/Vanilla Body 02/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - More Draconic External Selectors/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - More Draconic External Selectors/Idle Hover Branch/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - More Draconic External Selectors/Midair Shout Branch/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - More Draconic External Selectors/More Draconic Wings Effect/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - More Draconic External Selectors/Vanilla Arms/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - More Draconic External Selectors/Vanilla Body 01/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/Dragon Aspect Flight - More Draconic External Selectors/Vanilla Body 02/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/More Dragonic Dragon Aspect Can Fly/Dragon Aspect Flight - Elegant Flying Patch/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/More Dragonic Dragon Aspect Can Fly/Dragon Aspect Flight - Flying Mod Patch/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/More Dragonic Dragon Aspect Can Fly/Elegant Flying Animations/: config.json
Data/meshes/actors/character/animations/OpenAnimationReplacer/More Dragonic Dragon Aspect Can Fly/Flying Mod/: config.json
docs/: BehaviorArchitecture.md
include/DragonAspectFlight/: DragonAspectMonitor.h  FlightManager.h  InputHandler.h  Papyrus.h  Settings.h  UI.h
src/: DragonAspectMonitor.cpp  FlightManager.cpp  InputHandler.cpp  PCH.h  Papyrus.cpp  Settings.cpp  UI.cpp  main.cpp
tools/: MaterializeExternalAnimationLinks.ps1  dragon-aspect-flight-animation-links.json
